<resources>
    <string name="app_name">Envoy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_splash">Envoy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_template">Templates</string>
    <string name="menu_contact">Contacts</string>
    <string name="menu_autoresponder">Auto Responder</string>
    <string name="menu_message">Messages</string>
    <string name="menu_sender">Sender</string>
    <string name="menu_ussd">USSD</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_device">Device</string>
    <string name="sender">Sender</string>
    <string name="body_title">Send Message</string>
    <string name="inside_body">Devices</string>
</resources>