<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_template"
            android:icon="@drawable/template"
            android:title="@string/menu_template" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_autoresponder"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_autoresponder" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_sender"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_sender" />
        <item
            android:id="@+id/nav_ussd"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_ussd" />
        <item android:title="User"
            android:id="@+id/nav_user">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_device"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_device" />
            </menu>
        </item>
    </group>
</menu>